--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.divvyup"
+    package="com.main.divvyup"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,21 +14,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.main.divvyup.LoginPage"
-            android:label="@string/title_activity_login_page" >
+            android:name="com.main.divvyapp.LoginPage"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.main.divvyup.DealsPage"
+            android:name="com.main.divvyapp.DealsPage"
             android:label="@string/title_activity_deals_page" >
-        </activity>
-        <activity
-            android:name="helpeMethods.DataTransfer"
-            android:label="@string/title_activity_data_sender" >
         </activity>
     </application>
 
