--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.main.divvyapp"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
@@ -14,16 +16,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.main.divvyapp.LoginPage"
+            android:name=".LoginPage"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.main.divvyapp.DealsPage"
+            android:name=".DealsPage"
             android:label="@string/title_activity_deals_page" >
+        </activity>
+        <activity
+            android:name=".FindMeMatch"
+            android:label="@string/title_activity_find_me_match" >
         </activity>
     </application>
 
