--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".CompleteMatch"
             android:label="@string/title_activity_complete_match" >
         </activity>
+        <activity
+            android:name=".ChatAfterMatch"
+            android:label="@string/title_activity_chat_after_match" >
+        </activity>
     </application>
 
 </manifest>
