--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,13 +10,13 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:name="com.main.divvyapp.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.main.divvyapp.permission.C2D_MESSAGE" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
     <application
@@ -24,21 +24,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data
+	<meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <receiver
-            android:name=".GcmBroadcastReceiver"
+       <receiver
+            android:name="helpeMethods.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.example.gcm" />
+                <category android:name="com.main.divvyapp" />
             </intent-filter>
-        </receiver>
+        </receiver> 
 
-        <service android:name=".GcmIntentService" />
+        <service android:name="helpeMethods.GcmIntentService" /> 
 
         <activity
             android:name=".LoginPage"
@@ -63,7 +64,8 @@
         </activity>
         <activity
             android:name=".ChatAfterMatch"
-            android:label="@string/title_activity_chat_after_match" >
+            android:label="@string/title_activity_chat_after_match"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".StorePage"
